Map Points Added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
         <h3>Conclusion</h3>
         <p>Summary can zoom back to the original view.</p>
     </section>
+    <section id='part-5'>
+            <h3>Conclusion</h3>
+            <p>Summary can zoom back to the original view.</p>
+    </section>
+    <section id='part-6'>
+            <h3>Conclusion</h3>
+            <p>Summary can zoom back to the original view.</p>
+    </section>
+    <section id='part-7'>
+            <h3>Conclusion</h3>
+            <p>Summary can zoom back to the original view.</p>
+    </section>
+    <section id='part-8'>
+            <h3>Conclusion</h3>
+            <p>Summary can zoom back to the original view.</p>
+    </section>
+    
 </div>
 </body>
 </html>
